# Gitcord-GithubDiscordBot

./: .env.example  .gitignore  AUDIT_SUMMARY.md  AUDIT_TESTING_POINTS.txt  Dockerfile  GITCORD_DEEP_DIVE_REPORT.md  INSTALLATION.md  ORG_AGNOSTIC_AUDIT_REPORT.md  QUALITY_GUARDRAILS_VERIFICATION.md  QUICK_FIX_SYNC_SNAPSHOTS.md  README.md  TECHNICAL_DOCUMENTATION.md  TESTS.md  TEST_RESULTS.md  mentor_features_summary.txt  pyproject.toml  start-bot.sh
config/: example.yaml
docs/: AUDIT_ACTIVITY_VISIBILITY.md  AUDIT_LOGS_AND_HISTORY.md  CONFIG.md  CONTRIBUTION_METRICS_AND_COMMANDS_AUDIT.md  DEMO.md  GITHUB_SNAPSHOTS.md  MIGRATION_CHECKLIST.md  PROJECT.md  REVIEW_IDENTITY_AND_ROLES.md  SECURITY_VERIFICATION_IDENTITY_LINKING.md  SNAPSHOTS_SUMMARY.md  SNAPSHOT_COVERAGE_ANALYSIS.md  SYSTEMS_VERIFICATION_REPORT.md  TESTING_DISCORD.md  TESTING_SNAPSHOTS.md  TROUBLESHOOTING_SYNC_SNAPSHOTS.md  VERIFICATION.md  WHEN_SNAPSHOTS_CREATED.md  architecture.md
scripts/: debug_repo_contributor_roles.py  remove-cursor-coauthor.sh
tests/: conftest.py  test_audit_export.py  test_config.py  test_contribution_summary.py  test_difficulty_scoring.py  test_empty_org_behavior.py  test_github_ingestion_comments.py  test_identity_linking.py  test_issue_assignment_from_discord.py  test_issue_request_flow.py  test_merge_only_scoring.py  test_merge_role_rules.py  test_metrics.py  test_mutation_policy_gating.py  test_notifications.py  test_planning_determinism.py  test_pr_context.py  test_quality_guardrails.py  test_readme_setup.py  test_repo_contributor_roles.py  test_repo_filtering.py  (+5 more)
(+34 files in other folders)
